--- a/manuscripts/child-documents/methods.Rmd
+++ b/manuscripts/child-documents/methods.Rmd
@@ -11,7 +11,7 @@ tar_load(participant_descriptives)
 tar_load(participant_descriptives_final)
 ```
 
-`r stringr::str_to_sentence(xfun::numbers_to_words(participant_descriptives$n))` healthy adults (`r participant_descriptives$male` males, `r participant_descriptives$female` females) whose ages ranged from `r participant_descriptives$years_age_min` to `r participant_descriptives$years_age_max` years (M = `r papaja::apa_num(participant_descriptives$years_age_mean)`, SD = `r papaja::apa_num(participant_descriptives$years_age_sd)`) and whose years of education ranged from `r participant_descriptives$years_education_min` to `r participant_descriptives$years_education_max` years (M = `r papaja::apa_num(participant_descriptives$years_education_mean)`, SD = `r papaja::apa_num(participant_descriptives$years_education_sd)`) participated in the study. All participants were right handed, spoke English as a first language, and had normal or corrected-to-normal vision. Exclusion criteria for participation included a history of neurological disease or disorder, mental illness, head trauma, alcoholism or drug abuse, or use of psychotropic medications within the last two years preceding data collection. We excluded EEG data for analysis from three participants because they did not participate in the final session; one participant because their data from the final session was lost; and three participants because they had one or more recordings with excessive noise. The final sample used for analysis consisted of `r xfun::numbers_to_words(participant_descriptives_final$n)` participants (`r participant_descriptives_final$male` males, `r participant_descriptives_final$female` females) whose ages ranged from `r participant_descriptives_final$years_age_min` to `r participant_descriptives_final$years_age_max` years (M = `r papaja::apa_num(participant_descriptives_final$years_age_mean)`, SD = `r papaja::apa_num(participant_descriptives_final$years_age_sd)`) and whose years of education ranged from `r participant_descriptives_final$years_education_min` to `r participant_descriptives_final$years_education_max` years (M = `r papaja::apa_num(participant_descriptives_final$years_education_mean)`, SD = `r papaja::apa_num(participant_descriptives_final$years_education_sd)`).
+`r stringr::str_to_sentence(xfun::numbers_to_words(participant_descriptives$n))` healthy adults (`r participant_descriptives$male` males, `r participant_descriptives$female` females) whose ages ranged from `r participant_descriptives$years_age_min` to `r participant_descriptives$years_age_max` years (M = `r papaja::apa_num(participant_descriptives$years_age_mean)`, SD = `r papaja::apa_num(participant_descriptives$years_age_sd)`) and whose years of education ranged from `r participant_descriptives$years_education_min` to `r participant_descriptives$years_education_max` years (M = `r papaja::apa_num(participant_descriptives$years_education_mean)`, SD = `r papaja::apa_num(participant_descriptives$years_education_sd)`) participated in the study. All participants were right handed, spoke English as a first language, and had normal or corrected-to-normal vision. Exclusion criteria for participation included a history of neurological disease or disorder, mental illness, head trauma, alcoholism or drug abuse, or use of psychotropic medications within the last two years preceding data collection. We excluded EEG data for analysis from four participants because they did not participate in the final session, and three participants because they had one or more recordings with excessive noise. The final sample used for analysis consisted of `r xfun::numbers_to_words(participant_descriptives_final$n)` participants (`r participant_descriptives_final$male` males, `r participant_descriptives_final$female` females) whose ages ranged from `r participant_descriptives_final$years_age_min` to `r participant_descriptives_final$years_age_max` years (M = `r papaja::apa_num(participant_descriptives_final$years_age_mean)`, SD = `r papaja::apa_num(participant_descriptives_final$years_age_sd)`) and whose years of education ranged from `r participant_descriptives_final$years_education_min` to `r participant_descriptives_final$years_education_max` years (M = `r papaja::apa_num(participant_descriptives_final$years_education_mean)`, SD = `r papaja::apa_num(participant_descriptives_final$years_education_sd)`).
 
 ### Electrophysiological Data Acquisition
 
@@ -60,15 +60,15 @@ Raw EEG data was preprocessed to remove noise and non-neural artifacts from the 
 
 #### Preparing for functional connectivity analysis
 
-After artifact rejection, the continuous data was divided into epochs and filtered to prepare for functional connectivity analysis. This was a three step process. First, the continuous data was divided into equally spaced, overlapping epochs. Epochs with an 8 second duration were created at 5 second intervals such that an epoch occurred from 0-8 seconds, 5-13 seconds, 10-18 seconds, and so forth, until the end of the recording. Epochs that contained a bad segment were removed from the data. Second, the epoched data was filtered into five frequency bands---delta ($\delta$, 1-4 Hz), theta ($\theta$, 4-8 Hz), alpha ($\alpha$, 8-13 Hz), beta ($\beta$, 13-30 Hz), and gamma ($\gamma$, 30-50 Hz)---using a two-pass forward and reverse, zero-phase, non-causal band-pass finite impulse response filter. Third, epochs were cropped to a 5 second duration starting 1 second into each epoch such that an epoch then occurred from 1-6 seconds, 6-11 seconds, 11-16 seconds, and so forth.
+After artifact rejection, the continuous data was divided into epochs and filtered to prepare for functional connectivity analysis. This was a three step process. First, the epochs with an 8 second duration were created at 5 second intervals such that an epoch occurred from 0-8 seconds, 5-13 seconds, 10-18 seconds, and so forth, until the end of the recording. Epochs that contained a bad segment were removed. Second, the epoched data was filtered into five frequency bands---delta ($\delta$, 1-4 Hz), theta ($\theta$, 4-8 Hz), alpha ($\alpha$, 8-13 Hz), beta ($\beta$, 13-30 Hz), and gamma ($\gamma$, 30-50 Hz)---using a two-pass forward and reverse, zero-phase, non-causal band-pass finite impulse response filter. Third, epochs were cropped to a 5 second duration starting 1 second into each epoch such that an epoch then occurred from 1-6 seconds, 6-11 seconds, 11-16 seconds, and so forth.
 
-The purpose of this three step process was as follows: Filtering the data into five frequency bands allowed us to investigate whether the organization of functional networks between and within individuals was dependent or invariant of timescale (frequency band), rather than assuming network organization was governed solely by broadband processes [@mostamesadaghiani_OscillationBasedConnectivityArchitecture_2021]. However, filtering epoched data creates edge artifacts at the start and end of each epoch that distort the true signal. Creating longer epochs in the first step provided padding around the edges of each epoch that could be cropped in the third step to remove these edge artifacts; and overlapping epochs in the first step made it possible for the cropped epochs in the third step to be non-overlapping and contiguous with reference to the continuous data, preserving the true signal across the length of the recording. The 5 second duration was selected based on the minimum epoch length required to get reliable phase coupling estimates in the delta band.
+Filtering the data into five frequency bands allowed us to investigate whether the organization of functional networks between and within individuals was dependent or invariant of timescale (frequency band) [@mostamesadaghiani_OscillationBasedConnectivityArchitecture_2021]. However, filtering epoched data creates edge artifacts at the start and end of each epoch that distort the true signal. Creating longer epochs in the first step provided padding around the edges of each epoch that could be cropped in the third step to remove these edge artifacts; and overlapping epochs in the first step made it possible for the cropped epochs in the third step to be non-overlapping and contiguous with reference to the continuous data, preserving the true signal across the length of the recording. The 5 second duration was selected based on the minimum epoch length required to get reliable phase coupling estimates in the delta band.
 
 ## Analyses
 
 ### Functional Connectivity
 
-Functional connectivity was estimated between all pairs of EEG channels in each recording using the phase lag index [PLI; @stametal_PhaseLagIndex_2007] and the orthogonalized amplitude envelope correlation [AEC; @brookesetal_MeasuringFunctionalConnectivity_2011; @brookesetal_MeasuringFunctionalConnectivity_2012], which measure phase and amplitude coupling, respectively. Both the phase lag index and the orthogonalized amplitude envelope correlation account for the effects of field spread and volume conduction in the head, reducing the possibility of spurious coupling between channels from influencing our functional connectivity estimates [@bastosschoffelen_TutorialReviewFunctional_2016]. The resulting functional connectivity estimates from each recording were collected into twelve symmetrical $64 \times 64$ matrices called *functional connectomes* per frequency band and measure, which reflected electrophysiological cortical functional networks derived from averaged phase or amplitude coupling between each pair of channels. These functional connectomes were the basic unit of observation for subsequent analyses.
+Functional connectivity was estimated between all pairs of EEG channels using the phase lag index [PLI; @stametal_PhaseLagIndex_2007] and the orthogonalized amplitude envelope correlation [AEC; @brookesetal_MeasuringFunctionalConnectivity_2011; @brookesetal_MeasuringFunctionalConnectivity_2012], which measure phase and amplitude coupling, respectively. Both the phase lag index and the orthogonalized amplitude envelope correlation account for the effects of field spread and volume conduction, reducing the possibility of spurious coupling between channels from influencing our functional connectivity estimates [@bastosschoffelen_TutorialReviewFunctional_2016]. The resulting functional connectivity estimates from each recording were collected into twelve symmetrical $64 \times 64$ matrices called *functional connectomes* per frequency band and measure, which reflected electrophysiological cortical functional networks derived from averaged phase or amplitude coupling between each pair of channels. These functional connectomes were the basic unit of observation for subsequent analyses.
 
 #### Phase coupling
 
@@ -83,7 +83,7 @@ $$
   \right \vert,
 $$
 
-where $n$ is the number of frequency bins in each frequency band, $N$ is the number of epochs, $\operatorname{sign}(\cdot)$ is the signum operator, $\operatorname{imag}(\cdot)$ is the imaginary operator, and $S_{xyi}$ is the complex-valued cross spectral density between two sensors $x$ and $y$ at the individual frequency bins $f$ in the $i$th epoch, from which extract the phase angle differences at each frequency bin.
+where $n$ is the number of frequency bins in each frequency band, $N$ is the number of epochs, $\operatorname{sign}(\cdot)$ is the signum operator, $\operatorname{imag}(\cdot)$ is the imaginary operator, and $S_{xyi}$ is the complex-valued cross spectral density between two sensors $x$ and $y$ at the individual frequency bins $f$ in the $i$th epoch, from which we extract the phase angle differences at each frequency bin.
 
 We estimated the cross spectral density between two signals $x$ and $y$ using multitaper spectral estimation [@babadibrown_ReviewMultitaperSpectral_2014; @thomson_SpectrumEstimationHarmonic_1982] with digital prolate spheroidal sequence (DPSS) [@slepianpollak_ProlateSpheroidalWave_1961] windows. Seven tapers were used for each frequency band. The individual frequency bins used for each frequency band was determined by calculating the Discrete Fourier Transform sample frequencies for a 1001 sample window (corresponding to a 5 second epoch) and a sample space of 0.005 (the inverse of the 200 Hz sampling rate). This resulted in 501 frequency bins spaced at roughly 0.2 Hz intervals between zero and 100 Hz. Then for each frequency band we simply selected the frequency bins that were equal to or between the minimum and maximum frequencies of each frequency band. 
 
@@ -162,17 +162,13 @@ $$
 },
 $$
 
-where $\mathbf{S} = \mathbf{XX}^\mathsf{T}$ and $\mathbf{T} = \mathbf{YY}^\mathsf{T}$. The RV coefficient can thought of as a generalization of the squared Pearson correlation coefficient between two variables to the case of two sets of variables, where two sets of variables are correlated if the relative position (in Hilbert space) of the observations in one set is similar to the relative position of the observations in the other set [@josseholmes_MeasuringMultivariateAssociation_2016; @mayeretal_ExploratoryAnalysisMultiple_2011]. However, as can be seen in the equation above, unlike the Pearson correlation coefficient, the mean of the observations in a set is not subtracted from its observations when estimating the RV coefficient [@abdiherve_RVCoefficientCongruence_2007].
+where $\mathbf{S} = \mathbf{XX}^\mathsf{T}$ and $\mathbf{T} = \mathbf{YY}^\mathsf{T}$. The RV coefficient can be thought of as a generalization of the squared Pearson correlation coefficient between two variables to the case of two sets of variables, where two sets of variables are correlated if the relative position (in Hilbert space) of the observations in one set is similar to the relative position of the observations in the other set [@josseholmes_MeasuringMultivariateAssociation_2016; @mayeretal_ExploratoryAnalysisMultiple_2011]. However, as can be seen in the equation above, unlike the Pearson correlation coefficient, the mean of the observations in a set is not subtracted from its observations when estimating the RV coefficient [@abdiherve_RVCoefficientCongruence_2007]. The RV coefficient is sensitive to both the overall extent and the pattern of coupling, making it a viable measure for studying network variants.
 
 ```{r}
 which_participant <- "P19"
 ```
 
 Figure \@ref(fig:similarity-key) provides a visual depiction of how the similarities between functional connectomes are captured by the RV coefficient. On the left, Figure \@ref(fig:similarity-key)A shows the alpha band phase coupling functional connectomes for participant `r which_participant`; on the right, Figure \@ref(fig:similarity-key)B shows the similarity matrix containing the RV coefficient estimates for all pairs of functional connectomes shown in Figure \@ref(fig:similarity-key)A.
-
-As can be seen from this example, in the eyes open state (ro1, ro2), participant `r which_participant`'s functional connectomes are quite similar regardless of session (pre, post, fu), showing generally low phase coupling with no large deviations in overall patterns of the connectomes. This is reflected in the similarity matrix, which shows a quite high RV coefficient between the functional connectomes in the eyes open state. Conversely, in the eyes closed state (rc1, rc2), participant `r which_participant`'s functional connectomes are quite variable across recordings within and between sessions, showing varying levels of phase coupling with noticeable deviations in overall patterns of the connectomes. Again, this is reflected in the similarity matrix, which shows much lower RV coefficients between the functional connectomes in the eyes closed state. Finally, between states, participant `r which_participant`'s functional connectomes are quite different in the overall degree of phase coupling, but have some less visually obvious similarities in their overall pattern. This too is reflected in the similarity matrix, which shows moderate RV coefficients between the functional connectomes that share a similar pattern, despite their differences in the overall degree of phase coupling.
-
-This example demonstrates that the RV coefficient (1) acts as a good summary measure of the degree of similarity between functional connectomes, and (2) is sensitive to both the overall extent and the pattern of coupling, making it a viable measure for studying network variants.
 
 ```{r similarity-key}
 #| fig.cap: |
@@ -283,9 +279,9 @@ We collected the RV coefficient estimates into a similarity matrix, and then vis
 
 We used a mixed beta regression to model how functional connectome similarity varied between and within individuals, sessions, and states at the group-level for each frequency band [for an accessible overview of mixed beta regression, see @doumaweedon_AnalysingContinuousProportions_2019; @heiss_GuideModelingProportions_2021]. The unit of observation was the pair of functional connectomes used for a given similarity estimate. The response variable was the RV coefficient estimated for each pair, which was modelled with a beta distribution and related to the predictors with the logit link function following the parameterization of @cribari-netozeileis_BetaRegression_2010 and @ferraricribari-neto_BetaRegressionModelling_2004. The predictors were binary indicators (where $0 = \textrm{No}$ and  $1 = \textrm{Yes}$) for whether a pair was within participant, within session, or within state, and their interactions. Because the RV coefficient estimates are based on the similarity of pairs of functional connectomes, we included a random intercept for both the $\mathbf{X}$ and $\mathbf{Y}$ connectome that each observation came from to account for statistical dependencies between observations that had a connectome in common. All random effects were assumed to be normally distributed [@brooksetal_GlmmTMBBalancesSpeed_2017].
 
-We also originally planned to include a random intercept for the participant pair to account for the repeated observation of the same participant pairs, however including this term led to convergence problems for several of our models where the estimate for the variance of this parameter was zero. Although in principle participant pair should have been included in the statistical model as a random intercept to account for the repeated measures design, in practice its effect was negligible (estimates were similar or equivalent between models where it was and was not included). So we decided not to include this parameter for pragmatic reasons.
+We also originally planned to include a random intercept for the participant pair to account for the repeated observation of the same participant pairs, however including this term led to convergence problems for several of our models where the estimate for the variance of this parameter was zero. Although in principle participant pair should have been included in the statistical model as a random intercept to account for the repeated measures design, we decided not to include this parameter for pragmatic reasons so all our models would converge. The effect of not including participant pair was negligible for point estimates, which were similar or equivalent between models where it was and was not included; but was noticeable for interval estimates, which were generally wider by a factor of two to four when it was included compared to when it was not included. This difference did not meaningfully change the conclusions drawn from our results, however.
 
-The fit of the model was assessed using the following diagnostics: Posterior predictive checks---wherein we simulated replicated data under the fitted model and compared these to the observed data---were used to check for systematic differences between the fitted model and observed data [@gelmanetal_BayesianDataAnalysis_2013; @gelmanetal_RegressionOtherStories_2020; @gelmanhill_DataAnalysisUsing_2006]. Randomized quantile residuals plotted against uniform distribution quantiles were used to check for signs of model misspecification [@dunnsmyth_RandomizedQuantileResiduals_1996; @hartiglohse_DHARMaResidualDiagnostics_2022]. Quantiles of the random effects plotted against standard normal distribution quantiles were used to check if the random effects were normally distributed; we were not particularly concerned with deviations from normality here, as generalized linear mixed effects models have a large degree of robustness against misspecifying the shape of the random effects distribution [see @mccullochneuhaus_MisspecifyingShapeRandom_2011]. Variance Inflation Factors were used to check for multicollinearity between the predictors [@foxmonette_GeneralizedCollinearityDiagnostics_1992; @marcoulidesraykov_EvaluationVarianceInflation_2019; @obrien_CautionRegardingRules_2007]; we considered Variance Inflation Factors less than five as indicators of low multicollinearity between the predictors, values between five and ten moderate, and values greater than ten high and not tolerable [@jamesetal_IntroductionStatisticalLearning_2021].
+The fit of the model was assessed using the following diagnostics: Posterior predictive checks---wherein we simulated replicated data under the fitted model and compared these to the observed data---were used to check for systematic differences between the fitted model and observed data [@gelmanetal_BayesianDataAnalysis_2013; @gelmanetal_RegressionOtherStories_2020; @gelmanhill_DataAnalysisUsing_2006]. Randomized quantile residuals plotted against uniform distribution quantiles were used to check for signs of model misspecification [@dunnsmyth_RandomizedQuantileResiduals_1996; @hartiglohse_DHARMaResidualDiagnostics_2022]. Quantiles of the random effects plotted against standard normal distribution quantiles were used to check if the random effects were normally distributed; we were not particularly concerned with deviations from normality here, as generalized linear mixed effects models have a large degree of robustness against misspecifying the shape of the random effects distribution [see @mccullochneuhaus_MisspecifyingShapeRandom_2011]. Variance Inflation Factors were used to check for multicollinearity between the predictors [@foxmonette_GeneralizedCollinearityDiagnostics_1992; @marcoulidesraykov_EvaluationVarianceInflation_2019; @obrien_CautionRegardingRules_2007], where a value of less than five as indicated low multicollinearity between the predictors, values between five and ten moderate, and values greater than ten high and not tolerable [@jamesetal_IntroductionStatisticalLearning_2021].
 
 After fitting the model we constructed a reference grid using estimated marginal means [@lenthetal_EmmeansEstimatedMarginal_2022; @searleetal_PopulationMarginalMeans_1980], which were back-transformed to the response scale (0-1) for interpretability. The estimated marginal means were then used to estimate the difference in functional connectome similarity within and between participants using pairwise contrasts. Differences were estimated for (1) the overall difference in similarity within and between participants, which we term the *main effect*; (2) the difference in similarity within and between participants for each level of one predictor (e.g., within session similarity) while averaging over levels of the other predictor (e.g., within and between state similarity); (3) the difference in similarity within and between participants for the unique combinations within and between session and state. For any of these contrasts: A difference of zero indicated equal amounts of functional connectome similarity within and between participants, a positive difference indicated more similarity within than between participants, and a negative difference indicated more similarity between than within participants. These contrasts were the estimands of our model and will be the focus of discussion in the results section.
 
